--- a/Vinay_NP_Resume.html
+++ b/Vinay_NP_Resume.html
@@ -30,7 +30,6 @@
                                     <td valign="middle"><i class="fa fa-map-marker"></i></td>
                                     <td valign="middle">SFO / SCL / BLR</td>
                                 </tr>
-                               
                                 <tr>
                                     <td valign="middle"><i class="fa fa-envelope"></i></td>
                                     <td valign="middle">vinay@askvinay.com</td>
@@ -56,11 +55,11 @@
                     </div>
                     <div id="resume-details-left-3" class="resume-details-col">
                         <b>Education</b>
-                        <p>BE - Computer Science &amp; Engineering<br>2010 | First Class<br>VTU, Belgaum, India</p>
+                        <p>BE - Computer Science &amp; Engineering<br>2010 | First Class | VTU, India</p>
                     </div>
                     <div id="resume-details-left-4" class="resume-details-col">
                         <b>Languages</b>
-                        <p>English | Hindi | Kannada</p>
+                        <p>English | Hindi | Spanish</p>
                     </div>
                     <div id="resume-details-left-5" class="resume-details-col">
                         <b>Honors</b>
@@ -78,7 +77,7 @@
                     </div>
                     <div id="resume-details-left-6" class="resume-details-col">
                         <b>Interests</b>
-                        <p>Writing, Human Psychology, Marketing, Web Application Security, Robotics, Automation</p>
+                        <p>Web Application Security, Writing, Human Psychology, Marketing, Robotics, Automation</p>
                     </div>
                     <span class="hidden-xs"><br><br><br><br><br><br><br><br></span>
                 </div>
@@ -86,13 +85,13 @@
                     <div id="resume-details-right-1" class="resume-details-col">
                         <div class="resume-section-heading">Skills</div>
                         <div class="resume-details-col">
-                            <b>Tools</b>: Python, PHP, Javascript, MySQL, MongoDB, Redis, Solr, Apache, Flask, AWS Lambda, Git, SVN, AJAX, HTML5/CSS3
+                            <b>Product/People Management</b>: Roadmap Development, Requirements Gathering, Planning &amp; Estimation, Agile, Kanban, Lean Development Principles, Campus Recruitment, Growth Path Planning, Feedback Management, Progress Tracking
                         </div>
                         <div class="resume-details-col">
                             <b>Techniques</b>: REST APIs, Web Backends, Distributed Systems Design, Service Architectures (SOA/MSA), Data Modeling &amp; Warehousing, Test Driven Development
                         </div>
                         <div class="resume-details-col">
-                            <b>Project/People Management</b>: Planning &amp; Estimation, Agile, Kanban, Lean Development Principles, Campus Recruitment, Growth Path Planning, Feedback Management, Progress Tracking
+                            <b>Tools/Languages</b>: Python, PHP, Javascript, MySQL, MongoDB, Redis, Solr, Apache, Flask, AWS Lambda, Git, SVN, AJAX, HTML5/CSS3
                         </div>
                     </div>
                     <div id="resume-details-right-2" class="resume-details-col">
