minor updates to resume

--- a/Vinay_NP_Resume.html
+++ b/Vinay_NP_Resume.html
@@ -9,12 +9,14 @@
         <link rel="shortcut icon" href="favicon.ico">
         
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <!--<link rel="stylesheet" href="assets/css/bootstrap_print.min.css">-->
+        <link rel="stylesheet" href="assets/css/styles.css?v17052018">
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     </head>
     <body class="resume">
         <div class="container">
             <div id="row">
+                <!--<div id="resume-left-col" class="col-sm-4 col-xs-4">-->
                 <div id="resume-left-col" class="col-sm-4 col-xs-12">
                     <div class="center-text">
                         <div class="resume-photo">
@@ -32,26 +34,26 @@
                                 </tr>
                                 <tr>
                                     <td valign="middle"><i class="fa fa-envelope"></i></td>
-                                    <td valign="middle">vinay@askvinay.com</td>
+                                    <td valign="middle"><a href="mailto:vinay@askvinay.com" target="_BLANK">vinay@askvinay.com</a></td>
                                 </tr>
                                 <tr>
                                     <td valign="middle"><i class="fa fa-rss"></i></td>
-                                    <td valign="middle">askVinay.com</td>
+                                    <td valign="middle"><a href="https://askvinay.com" target="_BLANK">askVinay.com</a></td>
                                 </tr>
                                 <tr>
                                     <td valign="middle"><i class="fa fa-github"></i></td>
-                                    <td valign="middle"><a href="https://github.com/vinay20045">github.com/vinay20045</a></td>
+                                    <td valign="middle"><a href="https://github.com/vinay20045" target="_BLANK">github.com/vinay20045</a></td>
                                 </tr>
                                 <tr>
                                     <td valign="middle"><i class="fa fa-linkedin"></i></td>
-                                    <td valign="middle"><a href="https://in.linkedin.com/in/vinay20045">linkedin.com/in/vinay20045</a></td>
+                                    <td valign="middle"><a href="https://in.linkedin.com/in/vinay20045" target="_BLANK">linkedin.com/in/vinay20045</a></td>
                                 </tr>
                             </table>
                         </div>
                     </div>
                     <div id="resume-details-left-2" class="resume-details-col">
                         <b>About</b>
-                        <p>A highly motivated engineer with demonstrated technical leadership capabilities. My passion lies in building simple yet effective products. I have designed &amp; built horizontally scalable BI tools &amp; distributed systems. I have also led teams to build backends of high traffic web products/APIs. I work extraordinarily well in high pressure environments.</p>
+                        <p>A highly motivated engineer with demonstrated technical &amp; leadership capabilities. My passion lies in building simple yet effective products. I have designed &amp; built horizontally scalable BI tools &amp; distributed systems. I have also led teams to build backends of high traffic web products/APIs. I work extraordinarily well in high pressure environments.</p>
                     </div>
                     <div id="resume-details-left-3" class="resume-details-col">
                         <b>Education</b>
@@ -81,17 +83,18 @@
                     </div>
                     <span class="hidden-xs"><br><br><br><br><br><br><br><br></span>
                 </div>
+                <!--<div id="resume-right-col" class="col-sm-8 col-xs-8">-->
                 <div id="resume-right-col" class="col-sm-8 col-xs-12">
                     <div id="resume-details-right-1" class="resume-details-col">
                         <div class="resume-section-heading">Skills</div>
                         <div class="resume-details-col">
-                            <b>Product/People Management</b>: Roadmap Development, Requirements Gathering, Planning &amp; Estimation, Agile, Kanban, Lean Development Principles, Campus Recruitment, Growth Path Planning, Feedback Management, Progress Tracking
+                            <b>Product/People Management</b>: Roadmap Development, Requirements Gathering, Planning &amp; Estimation, Agile, Kanban, Lean Development Principles, Campus Recruitment, Mentoring, Growth Path Planning, Feedback Management, Progress Tracking
                         </div>
                         <div class="resume-details-col">
                             <b>Techniques</b>: REST APIs, Web Backends, Distributed Systems Design, Service Architectures (SOA/MSA), Data Modeling &amp; Warehousing, Test Driven Development
                         </div>
                         <div class="resume-details-col">
-                            <b>Tools/Languages</b>: Python, PHP, Javascript, MySQL, MongoDB, Redis, Solr, Apache, Flask, AWS Lambda, Git, SVN, AJAX, HTML5/CSS3
+                            <b>Tools/Languages</b>: Python, PHP, Javascript, MySQL, MongoDB, Redis, Solr, Apache, Flask, Git, SVN, AJAX, HTML5/CSS3
                         </div>
                     </div>
                     <div id="resume-details-right-2" class="resume-details-col">
@@ -104,11 +107,10 @@
                             </ul>
                         </div>
                         <div class="resume-details-col">
-                            <div class="resume-job-title">Consultant Architect/Technical Advisor</div>
+                            <div class="resume-job-title">Consultant Architect / Technical Advisor / Mentor</div>
                             February 2014 - Present
-                            <ul>
-                                <li><a href="http://secretangel.in/">Secret Angel</a> - I set up the overall technical back end for their omni channel retail operations. I currently hold a minority stake in the company.</li>
-                                <li><a href="https://www.inrootz.in/">InRootz</a> - Conceived the architecture for their commerce-around-content web product.</li>
+                            <ul class="ul-no-style">
+                                <li>I primarily work with startups to help them form their tech strategy and/or build their core architecture. I also occasionally advise and mentor startups on their tech stack choices, team building and related activities.</li>
                             </ul>
                         </div>
                         <div class="resume-details-col">
@@ -133,10 +135,8 @@
                             <div class="resume-job-title">Tech Lead - <a href="http://commonfloor.com/" target="_BLANK">CommonFloor</a> <a href="http://quikr.com/" target="_BLANK">(now acquired by Quikr)</a></a></div>
                             September 2012 - October 2014
                             <ul>
-                                <li>Led several teams of 6 to 12 members responsible for the delivery of Agent Directory, Leads Management &amp; Ad Publishing in the Real Estate vertical.</li>
-                                <li>Single handedly built the new self serve internal reporting tool which helped significantly reduce the number of support tickets the engineers received.</li>
-                                <li>Volunteered to lead the tech ops team which provided support for a large team of internal customers. Led the team for over a year.</li>
-                                <li>Initiated several successful ventures like Bug Bash &amp; Kanban for development. The team successfully squashed 120+ bugs during the first bug bash.</li>
+                                <li>Led several engineering teams responsible for the delivery of Agent Directory, Leads Management &amp; Ad Publishing in the Real Estate vertical.</li>
+                                <li>Initiated several successful processes like Bug Bash &amp; Kanban for development. The team successfully squashed 120+ bugs during the first bug bash.</li>
                                 <li>Have coordinated, planned &amp; completed over 20 high impact, production deployments apart from several small releases &amp; hot fixes.</li>
                             </ul>
                         </div>
