--- a/Vinay_NP_Resume.html
+++ b/Vinay_NP_Resume.html
@@ -1,6 +1,14 @@
 <html>
     <head>
-     <meta charset="utf-8">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34691728-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-34691728-1', {'anonymize_ip': true});
+        </script>
+
+        <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
@@ -157,17 +165,5 @@
 
         <script src="assets/js/utils/jquery.js"></script>
         <script src="assets/js/utils/bootstrap.min.js"></script>
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-34691728-1']);
-            _gaq.push(['_setDomainName', 'askvinay.com']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-        </script>
     </body>
 </html>
