Changing profile pic and updating resume

--- a/Vinay_NP_Resume.html
+++ b/Vinay_NP_Resume.html
@@ -14,7 +14,7 @@
 
         <title>My Resume - Vinay NP - askvinay.com</title>
 
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="assets/images/profile_pic.jpg">
         
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <!--<link rel="stylesheet" href="assets/css/bootstrap_print.min.css">-->
@@ -28,9 +28,9 @@
                 <div id="resume-left-col" class="col-sm-4 col-xs-12">
                     <div class="center-text">
                         <div class="resume-photo">
-                           <img src="assets/images/Vinay_NP_high_res.jpg" width="150"> 
+                           <img src="assets/images/profile_pic.jpg" width="150"> 
                         </div>
-                        <div class="resume-name">Vinay Kumar NP</div>
+                        <div class="resume-name">Vinay NP</div>
                         <div class="resume-title">Engineer | Entrepreneur</div>
                     </div>
                     <div id="resume-details-left-1" class="resume-details-col">
@@ -89,7 +89,7 @@
                         <b>Interests</b>
                         <p>Web Application Security, Writing, Human Psychology, Marketing, Robotics, Automation</p>
                     </div>
-                    <span class="hidden-xs"><br><br><br><br><br><br><br><br></span>
+                    <span class="hidden-xs"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></span> <!-- yeah, i know! -->
                 </div>
                 <!--<div id="resume-right-col" class="col-sm-8 col-xs-8">-->
                 <div id="resume-right-col" class="col-sm-8 col-xs-12">
@@ -108,10 +108,12 @@
                     <div id="resume-details-right-2" class="resume-details-col">
                         <div class="resume-section-heading">Experience</div>
                         <div class="resume-details-col">
-                            <div class="resume-job-title">Co Founder &amp; CTO - <a href="http://int.ai/" target="_BLANK">Int Data Labs, Inc</a></div>
+                            <div class="resume-job-title">Co Founder &amp; CTO - <a href="http://int.ai/" target="_BLANK">int.ai</a></div>
                             January 2016 - Present
-                            <ul>
-                                <li>Responsible for the architecture, design &amp; development of the virtual analyst BI product &amp; the underlying platform.</li>
+                            <ul class="ul-no-style">
+                                <li>At int.ai we are building a full-stack enterprise data platform. What sets it apart from competition is the intelligent interface using which insights for business decision making, can be drawn, at the speed of thought.<br><br>
+                                Taking advantage of the advancements in storage and compute power, our vision is to automate the role of a business analyst by using Natural Language Processing and advanced Classification/Clustering algorithms.<br><br>
+                                Having conceived the architecture and the design of the product, I developed the initial prototype for the virtual analyst BI product. Along with a small team, I am now working on v2 of the product, trying to bring our vision to life one step at a time. </li>
                             </ul>
                         </div>
                         <div class="resume-details-col">
