--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <title>askVinay.com - My take on things...</title>
 
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="assets/images/profile_pic.jpg">
 
         <!-- Styles -->
         <link rel="stylesheet" href="assets/css/styles.css?v2">
