Fixing typo in resume

--- a/Vinay_NP_Resume.html
+++ b/Vinay_NP_Resume.html
@@ -156,7 +156,7 @@
                             <ul>
                                 <li>Started out as a student entrepreneur &amp; worked with over 500 customers on their software design needs. Built apps, managed servers, domains etc.</li>
                                 <li>Built a location based consumer product which scaled to 42K+ users in 3 months.</li>
-                                <li>Learned what it takes to build &amp; manage a team of engineers.</li>
+                                <li>Learnt what it takes to build &amp; manage a team of engineers.</li>
                             </ul>
                         </div>
                     </div>
