adding styling rules to strip links while printing resume

--- a/Vinay_NP_Resume.html
+++ b/Vinay_NP_Resume.html
@@ -17,7 +17,16 @@
         <link rel="shortcut icon" href="assets/images/profile_pic.jpg">
         
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <!--<link rel="stylesheet" href="assets/css/bootstrap_print.min.css">-->
+        <!--<link rel="stylesheet" href="assets/css/bootstrap_print.min.css">
+        <style type="text/css">
+            @media print{
+                a[href]:after{
+                    content: none
+                }
+            }
+        </style>
+        -->
+
         <link rel="stylesheet" href="assets/css/styles.css?v17052018">
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     </head>
